<resources>
    <string name="app_name">ScrimGG</string>
    <string name="tvChatRoomName">NombreSalaChat</string>
    <string name="tbMensaje_hint">Escribe un mensaje</string>
    <string name="txtLobby">CHAT</string>
    <string name="btVerEquipos">Ver Equipos</string>
    <string name="btMisEquipos">Mis Equipos</string>
    <string name="btVerHistorial">Ver Historial</string>
    <string name="btMiHistorial">Mi Historial</string>
    <string name="btModificarTxt">Modificar Datos</string>
    <string name="nivel">Nivel</string>
    <string name="lbNicknameModif">NickName#0000</string>
    <string name="nivelValor">1</string>
    <string name="lbNomCuenta">Nombre de la cuenta de Riot:</string>
    <string name="nomCuenta">invocadorPepito47</string>
    <string name="soloq">SoloQ</string>
    <string name="rangoSoloq">Oro IV</string>
    <string name="rangoSgg">Rango SGG</string>
    <string name="rangoFlexq">Plata II</string>
    <string name="nomEquipo">NomMejorEquipo</string>
    <string name="flexq">FlexQ</string>
    <string name="cambiar">Cambiar</string>
    <string name="lbEmail">Email:</string>
    <string name="email">email_usuario@dominio.com</string>
    <string name="btGuardarCambios">Guardar cambios</string>
    <string name="registro">REGISTRO</string>
    <string name="entrar">ENTRAR</string>
    <string name="logotipo">logotipo</string>
    <string name="pass">Contraseña</string>
    <string name="auto">seAutoGenera</string>
    <string name="equipoPrueba">PTK Inter de Logroño</string>
    <string name="eloPrueba">ELO</string>
    <string name="ligaPrueba">LIGA</string>
    <string name="integrantes">Integrantes</string>
    <string name="settings">Settings</string>
    <string name="team">team</string>
    <string name="elo">elo</string>
    <string name="liga">liga</string>
    <string name="title_activity_menu_lateral">menuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Volver al menú principal</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_team">Mis equipos</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="main_calendar">Ver Calendario</string>
    <string name="main_info">Mi perfil</string>
    <string name="tvNotificationsTitle">NOTIFICACIONES</string>
    <string name="Tutorial">main_tutorial</string>
    <string name="main_tutorial">Tutorial</string>
    <string name="tvCreateTeam">NUEVO EQUIPO</string>
    <string name="etNewTeamName">Escribe aquí el nombre...</string>
    <string name="btSubmitNewTeam">Enviar</string>
    <string name="btCancelNewTeam">Cancelar</string>
    <string name="tvFieldName">Nombre del Campo:</string>
    <string name="tvTeamName">Nombre del Equipo:</string>
    <string name="tvWarningMsg">Mensaje advertencia</string>
    <string name="etFormNewText">Escribe aquí...</string>
    <string name="tvRoomName">Nombre</string>
    <string name="tvLastMsg">Ultimo Mensaje</string>
    <string name="tvLastMsgTime">Hora</string>
    <string name="tvNotificationTitle">Notificación</string>
    <string name="tvNotificationTime">Hace una hora</string>
    <string name="tvNotificationText">Texto</string>
    <string name="ibNotificationWipe">Eliminar todas las notificaciones</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="notifWipeAskTitle">Eliminando todas las notificaciones</string>
    <string name="notifWipeAskMessage">¿Estás seguro?</string>
    <string name="tvFormFieldName">Nombre del Campo:</string>
    <string name="btFormSubmit">Aceptar</string>
    <string name="btFormCancel">Cancelar</string>
    <string name="accRank_default">Unranked</string>
    <string name="accName_unspecified">[Cuenta sin especificar]</string>
    <string name="loadscreen_text">Cargando...</string>
    <string name="menu_newteam">Crear nuevo equipo</string>
    <string name="main_ligasP">Ver Ligas Profesionales</string>
    <string name="main_buscarE">Buscar Equipo</string>
    <string name="main_buscarEnfr">Buscar Enfrentamientos</string>
    <string name="main_infEquip">Informacion Equipos Publicos</string>
    <string name="email_login">Email</string>
</resources>