<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/main_info" />
        <item
            android:id="@+id/nav_newteam"
            android:icon="@drawable/ic_menu_team"
            android:title="@string/menu_newteam" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_menu_team"
            android:title="@string/menu_team" />
        <item
            android:id="@+id/nav_ligasP"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/main_ligasP" />
        <item
            android:id="@+id/nav_busqEquip"
            android:icon="@drawable/ic_buscar"
            android:title="@string/main_buscarE" />
        <item
            android:id="@+id/nav_busqEnfr"
            android:icon="@drawable/ic_buscar"
            android:title="@string/main_buscarEnfr" />
        <item
            android:id="@+id/nav_infoEquipos"
            android:icon="@drawable/ic_info"
            android:title="@string/main_infEquip" />
        <item
            android:id="@+id/nav_cerrar"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
