<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".showTeam"
    android:background="@drawable/player_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/borderCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/player_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/settingsIV"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="23dp"
            android:layout_marginRight="23dp"
            android:contentDescription="@string/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_adjust"
            android:onClick="goToSettings"/>

        <TextView
            android:id="@+id/integrantesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/integrantes"
            android:textColor="#FF007C"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/playersCL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/playersCL"
            android:layout_width="270dp"
            android:layout_height="316dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/player_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsIV">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/teamIV"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginStart="102dp"
            android:layout_marginLeft="102dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:contentDescription="@string/team"
            app:layout_constraintEnd_toStartOf="@+id/settingsIV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/teamTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/equipoPrueba"
            android:textColor="#FF007C"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamIV" />

        <ImageView
            android:id="@+id/eloIV"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/elo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamTV"
            app:srcCompat="@drawable/buttonshape" />

        <ImageView
            android:id="@+id/ligaIV"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="130dp"
            android:layout_marginRight="130dp"
            android:contentDescription="@string/liga"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamTV"
            app:srcCompat="@drawable/buttonshape" />

        <TextView
            android:id="@+id/eloTV"
            android:layout_width="20dp"
            android:layout_height="11dp"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/eloPrueba"
            android:textColor="#FF007C"
            android:textSize="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eloIV" />

        <TextView
            android:id="@+id/ligaTV"
            android:layout_width="20dp"
            android:layout_height="11dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="130dp"
            android:layout_marginRight="130dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/ligaPrueba"
            android:textColor="#FF007C"
            android:textSize="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ligaIV" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>