<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity"
    android:background="@drawable/img_background">


    <!-- REF -->

    <Button
        android:id="@+id/btEntrarStart"
        android:layout_width="64dp"
        android:layout_height="21dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/glow_button"
        android:fontFamily="@font/roboto"
        android:onClick="login"
        android:shadowColor="#D9006A"
        android:text="@string/entrar"
        android:textColor="#ffffffff"
        android:textSize="4pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPass" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="313dp"
        android:layout_height="282dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logotipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_alas_blanco" />

    <!-- REF -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPass"
        android:layout_width="226dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/glow_button"
        android:hint="@string/pass"
        android:theme="@style/EditTextHint"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/auto"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="226dp"
        android:layout_height="44dp"
        android:layout_marginTop="424dp"
        android:background="@drawable/glow_button"
        android:hint="@string/email_login"
        android:theme="@style/EditTextHint"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/entrar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tilEmail"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>