<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/player_background"
    android:scrollbars="vertical"
    android:layout_marginTop="50dp"
    tools:context=".act.usuario.VerUsuario">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/gradient_top_transparent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/player_border"
        app:layout_constraintBottom_toTopOf="@+id/clProfile4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">


        <ImageView
            android:id="@+id/imFotoPerfil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clProfile1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/imFotoPerfil">

            <TextView
                android:id="@+id/lbNickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/lbNicknameModif"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbNivel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:gravity="end"
                android:text="@string/nivel"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbNickname" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbNickname" />

            <TextView
                android:id="@+id/lbNumNivel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/nivelValor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/lbNickname" />

            <ProgressBar
                android:id="@+id/pbExperiencia"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clProfile2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/clProfile1">

            <TextView
                android:id="@+id/lbCuentaEtiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/lbNomCuenta"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/nomCuenta"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbCuentaEtiqueta" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clProfile3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clProfile2">

            <ImageView
                android:id="@+id/imRankSoloq"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbSoloQ"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imRankFlexq"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbFlexQ"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/lbSoloQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/soloq"
                app:layout_constraintEnd_toEndOf="@+id/imRankSoloq"
                app:layout_constraintHorizontal_bias="0.465"
                app:layout_constraintStart_toStartOf="@+id/imRankSoloq"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbRankSoloq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/rangoSoloq"
                app:layout_constraintEnd_toEndOf="@+id/imRankSoloq"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="@+id/imRankSoloq"
                app:layout_constraintTop_toBottomOf="@+id/imRankSoloq" />

            <TextView
                android:id="@+id/lbRankFlexq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/rangoFlexq"
                app:layout_constraintEnd_toEndOf="@+id/imRankFlexq"
                app:layout_constraintStart_toStartOf="@+id/imRankFlexq"
                app:layout_constraintTop_toBottomOf="@+id/imRankFlexq" />

            <TextView
                android:id="@+id/lbFlexQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/flexq"
                app:layout_constraintEnd_toEndOf="@+id/imRankFlexq"
                app:layout_constraintStart_toStartOf="@+id/imRankFlexq"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProfile4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btHistorial"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/glow_button"
            android:fontFamily="@font/roboto"
            android:onClick="historial"
            android:text="@string/btVerHistorial"
            app:layout_constraintBottom_toTopOf="@+id/btEquipos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btEquipos"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/glow_button"
            android:fontFamily="@font/roboto"
            android:onClick="equipos"
            android:text="@string/btVerEquipos"
            app:layout_constraintBottom_toTopOf="@+id/btModificarDatos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btModificarDatos"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/glow_button"
            android:fontFamily="@font/roboto"
            android:onClick="modificarDatos"
            android:text="@string/btModificarTxt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/gradient_bottom_transparent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>