<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="3dp"
    android:layout_marginHorizontal="5dp"
    cardview:cardCornerRadius="15sp"
    tools:context=".act.notif.Notificaciones"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:minHeight="70dp"
        android:background="@drawable/chat_message">

        <!-- TODO : Notification source image -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvNotificationTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingVertical="5dp"
                    android:text="@string/tvNotificationTitle"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvNotificationTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingRight="10dp"
                    android:text="@string/tvNotificationTime"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvNotificationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/tvNotificationText"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>