<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartingAct"
    android:background="@drawable/img_background">

    <Button
        android:id="@+id/btEntrarStart"
        android:layout_width="146dp"
        android:layout_height="47dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/glow_button"
        android:fontFamily="@font/roboto"
        android:onClick="goToLog"
        android:shadowColor="#D9006A"
        android:text="@string/entrar"
        android:textColor="#ffffffff"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="146dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/glow_button"
        android:fontFamily="@font/roboto"
        android:onClick="goToReg"
        android:shadowColor="#D9006A"
        android:text="@string/registro"
        android:textColor="#ffffffff"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btEntrarStart" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="313dp"
        android:layout_height="282dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logotipo"
        app:layout_constraintBottom_toTopOf="@+id/btEntrarStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_alas_blanco" />

    <!-- TODO : borrar este botón de pruebas. No se ve, pero está ahí. -->
    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:onClick="goToProbar"
        android:text="Button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>